--- a/fluidlab/configs/exp_gathering_sand_shac.yaml
+++ b/fluidlab/configs/exp_gathering_sand_shac.yaml
@@ -6,7 +6,7 @@ params:
     MM_caching_frequency: 16
 
   network:
-    actor: ActorDeterministicMLP # ActorDeterministicMLP ActorStochasticPPO
+    actor: ActorStochasticMLP # ActorDeterministicMLP ActorStochasticPPO
     actor_mlp:
       units: [128, 64, 32]
       activation: elu
@@ -34,7 +34,7 @@ params:
     steps_num: 32
     grad_norm: 1.0 
     truncate_grads: True 
-    num_actors: 4
+    num_actors: 3
     save_interval: 400
 
     player:
